@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Manage preferred vendors
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class PreferredVendor {
 +Guid Id
 +string Name
 +string? Email
 +string? Phone
 +VendorRole[] Roles
 +long Version
 +UpdateContact(email: string, phone: string): void
}
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- PreferredVendor : persists or supplies inputs
@enduml
